src/test/compile-fail/E0446.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

mod Foo {
    struct Bar(u32);

    pub fn bar() -> Bar { //~ ERROR E0446
                          //~| NOTE can't leak private type
        Bar(0)
    }
}

fn main() {}
